--- a/assets/css/foot.scss
+++ b/assets/css/foot.scss
@@ -47,7 +47,12 @@ footer#footer {
         transform: translate(-30%,-35%);
         transition: all .25s ease;
         width: 82px;
-
+      }
+      &:focus {
+        outline: none;
+        svg {
+          @include color(fill, link);
+        }
       }
       &:hover::before {
         transform: translate(-30%,-120%);
