--- a/assets/css/critical.scss
+++ b/assets/css/critical.scss
@@ -94,11 +94,13 @@ body {
     min-height: 72px;
     @supports (display:grid) {
       display: grid;
-      grid-template-columns: 115px 475px;
+      grid-template-columns: 115px 300px;
       grid-template-rows: auto;
-      @include media-query-max(700px) {
-        grid-template-columns: 115px 140px;
-        grid-template-rows: repeat(2,auto);
+      @include media-query-max(450px) {
+        grid-row-gap: 15px;
+        grid-template-columns: auto;
+        grid-template-rows: 42px 25px;
+        justify-content: center;
       }
     }
     a.home {
@@ -110,115 +112,44 @@ body {
       width: 115px;
       @supports (display:grid) {
         grid-column: 1/2;
-        @include media-query-max(700px) {
+        @include media-query-max(450px) {
           grid-row: 1/2;
+          justify-self: center;
         }
+      }
+      @include media-query-max(450px) {
+        width: 95px;
       }
       svg,
       img {
         height: 40px;
         width: auto;
+        @include media-query-max(450px) {
+          height: 35px;
+        }
       }
       img {
         margin: 0 2px;
       }
     }
-    input#toggle {
-      @extend %none;
-      @extend %absolute;
-      height: 24px;
-      margin: 0;
-      right: 15px;
-      top: 25px;
-      width: 30px;
-      &:checked + .hamburger .top {
-        transform: rotate(-45deg);
-        margin-top: 5.5px;
-      }
-      &:checked + .hamburger .meat {
-        transform: rotate(45deg);
-        margin-top: -3.5px;
-      }
-      &:checked + .hamburger .bottom {
-        transform: scale(0);
-      }
-      &:checked ~ nav.navbar {
-        height: 216px;
-        margin-top: 15px;
-        @supports (display:grid) {
-          height: 180px;
-        }
-      }
-    }
-    label.hamburger {
-      @extend %content-center;
-      @extend %flex;
-      @extend %flex-column;
-      @extend %items-center;
-      height: 24px;
-      width: 30px;
-      z-index: 10;
-      @supports (display:grid) {
-        @include media-query-max(700px) {
-          justify-self: end;
-          grid-column: 2/3;
-          grid-row: 1/2;
-        }
-      }
-      @include media-query-min(700px) {
-        display: none;
-      }
-      div {
-        @extend %relative;
-        @include color(background-color, text);
-        height: 3px;
-        margin-top: 5px;
-        transition: all 0.25s ease-in-out;
-        width: 30px;
-      }
-    }
     nav.navbar {
-      width: 475px;
+      width: 300px;
       @supports (display:grid) {
         grid-column: 2/3;
-        @include media-query-max(700px) {
-          grid-column: 2/3;
+        @include media-query-max(450px) {
+          grid-column: 1/2;
           grid-row: 2/3;
         }
       }
-      @include media-query-max(700px) {
-        @include color(background-color, background);
-        align-items: flex-end;
-        clear: both;
-        flex-direction: column;
-        height: 0px;
-        justify-content: center;
-        margin: 0;
-        overflow: hidden;
-        padding: 0;
-        text-align: center;
-        transition: all .25s ease;
-        width: 100%;
-        z-index: 10;
-        @supports (display:grid) {
-          display: grid;
-          justify-content: end;
-          grid-template-columns: auto repeat(2,30px);
-          grid-template-rows: repeat(5, 36px);
-        }
+      @include media-query-max(335px) {
+        width: 270px;
       }
       a {
         @extend %decoration-none;
-        font-size: .95rem;
-        line-height: 1rem;
+        font-size: 1.15rem;
         transition: text-decoration 0.5s ease;
-        @include media-query-max(350px) {
-          line-height: 1rem;
-        }
-        @include media-query-max(700px) {
-          grid-column: 1/4;
-          margin: 10px 0 10px auto;
-          text-align: end;
+        @include media-query-max(335px) {
+          font-size: 1rem;
         }
         &.rss,
         &.twitter {
@@ -231,14 +162,6 @@ body {
           svg {
             height: 15px;
             width: 15px;
-          }
-          @include media-query-max(350px) {
-            height: 13px;
-            width: 13px;
-            svg {
-              height: 13px;
-              width: 13px;
-            }
           }
         }
         &.rss {
@@ -282,11 +205,11 @@ body {
         margin-bottom: 15px;
       }
       h2.title {
-        font-size: 2rem;
+        font-size: 1.75rem;
         margin: 0 0 15px;
         a {
           @extend %decoration-none;
-          font-size: 2rem;
+          font-size: 1.75rem;
         }
       }
       p.tag {
