--- a/layouts/bookmarks/list.html
+++ b/layouts/bookmarks/list.html
@@ -1,7 +1,7 @@
 {{ define "main" }}
   <main class="list bookmarks">
     <h1 class="title">Bookmarks</h1>
-    {{ partial "book-cats.html" . }}
+    {{ partial "categories.html" . }}
     <ul id="records">
       <nav class="sorting">
         <p class="sort-item" onclick="sort('records','data-title')">Title</p>
