--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,11 +5,13 @@
     <p class="divider">&nbsp;&bull;&nbsp;</p>
     <a href="{{ .Site.BaseURL }}bookmarks" class="extra-items">Bookmarks</a>
     <p class="divider">&nbsp;&bull;&nbsp;</p>
+    <a href="{{ .Site.BaseURL }}reading-list" class="extra-items">Reading List</a>
+    <p class="divider">&nbsp;&bull;&nbsp;</p>
     <a href="{{ .Site.BaseURL }}stuff" class="extra-items">Stuff</a>
   </nav>
   <section class="copy">
     <!-- Copyright -->
     <p>&copy;&nbsp;{{ time.Now.Format "2006" }}&nbsp;</p>
-    <p>{{ .Site.Author.name }}</p>
+    <p>{{ .Site.Title }}</p>
   </section>
 </footer>
