--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,7 +17,7 @@
   <nav class="navbar">
     <a href="{{ .Site.BaseURL }}articles">Articles</a>
     <a href="{{ .Site.BaseURL }}microposts">Micro</a>
-    <a href="{{ .Site.BaseURL }}about-me" aria-label="About me">About</a>
+    <a href="{{ .Site.BaseURL }}about-me" aria-label="About me">About Me</a>
     <a href="https://www.twitter.com/{{ .Site.Params.social }}" class="twitter icon" target="_blank" rel="noopener" aria-label="Twitter">
       <svg width="15" height="15" viewBox="0 0 200 200" version="1.1" role="img" aria-labelledby="twitterTitle" aria-describedby="twitterDesc">
         <title id="twitterTitle">View my twitter profile</title>
