--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -134,15 +134,21 @@
     // UI Switcher
     const body = document.querySelector('body');
     const sets = document.getElementById('settings');
+    const ops = document.querySelector('section.options');
     const colors = document.querySelectorAll('p.colors');
     const fonts = document.querySelectorAll('p.type');
+    sets.addEventListener('click', e => {
+      ops.classList.toggle('active');
+      sets.classList.toggle('active');
+    });
     var uiSwitcher = (item,change,mod) => {
       item.forEach(option => {
         option.addEventListener("click", e => {
           e.preventDefault();
           var value = option.id;
           body.setAttribute(mod, value);
-          sets.checked = false;
+          sets.classList.remove('active');
+          ops.classList.remove('active');
           localStorage.removeItem(change);
           localStorage.setItem(change, value);
         }, false);
