--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -15,7 +15,7 @@
 
   <!-- Site navigation menu -->
   <nav class="navbar">
-    <a href="{{ .Site.BaseURL }}articles">Articles</a>
+    <a href="{{ .Site.BaseURL }}articles">Archive</a>
     <a href="{{ .Site.BaseURL }}microposts">Micro</a>
     <a href="{{ .Site.BaseURL }}about-me" aria-label="About me">About Me</a>
     <a href="https://www.twitter.com/{{ .Site.Params.social }}" class="twitter icon" target="_blank" rel="noopener" aria-label="Twitter">
