--- a/assets/css/critical.scss
+++ b/assets/css/critical.scss
@@ -88,19 +88,22 @@ body {
   // Header
   header#header {
     @extend %content-space-between;
-    @extend %flex-wrap;
+    @extend %flex-column;
     @extend %items-center;
     @extend %relative;
     min-height: 72px;
     @supports (display:grid) {
       display: grid;
-      grid-template-columns: 95px 330px;
-      grid-template-rows: auto;
+      grid-row-gap: 15px;
+      grid-template-columns: auto;
+      grid-template-rows: 50px 25px;
+      justify-content: center;
       @include media-query-max(450px) {
-        grid-row-gap: 15px;
-        grid-template-columns: auto;
-        grid-template-rows: 42px 25px;
-        justify-content: center;
+        grid-template-rows: 45px 25px;
+      }
+      @include media-query-max(365px) {
+        grid-template-rows: 35px 25px;
+        padding-bottom: 0;
       }
     }
     a.home {
@@ -108,19 +111,28 @@ body {
       @extend %flex;
       @extend %items-center;
       @extend %decoration-none;
-      height: 42px;
-      width: 95px;
+      height: 50px;
       @supports (display:grid) {
         grid-column: 1/2;
-        @include media-query-max(450px) {
-          grid-row: 1/2;
-          justify-self: center;
-        }
+        grid-row: 1/2;
+        justify-self: center;
+      }
+      @include media-query-max(450px) {
+        height: 45px;
+      }
+      @include media-query-max(365px) {
+        height: 35px;
       }
       svg,
       img {
-        height: 35px;
+        height: 50px;
         width: auto;
+        @include media-query-max(450px) {
+          height: 45px;
+        }
+        @include media-query-max(365px) {
+          height: 35px;
+        }
       }
       img {
         margin: 0 2px;
@@ -129,11 +141,8 @@ body {
     nav.navbar {
       width: 330px;
       @supports (display:grid) {
-        grid-column: 2/3;
-        @include media-query-max(450px) {
-          grid-column: 1/2;
-          grid-row: 2/3;
-        }
+        grid-column: 1/2;
+        grid-row: 2/3;
       }
       @include media-query-max(365px) {
         width: 270px;
