--- a/layouts/shortcodes/note.html
+++ b/layouts/shortcodes/note.html
@@ -1,2 +1,2 @@
 {{ $i := .Get 0 }}
-<li class="note" id="fn:{{ $i }}" data-item="{{ $i }}."><p>{{ .Get 1 }}<a class="footnote-return" href="{{ .Page.RelPermalink }}#fnref:{{ $i }}" data-href="#fnref:{{ $i }}">↩</a></p></li>
+<li class="note" id="fn:{{ $i }}" data-item="{{ $i }}."><p>{{ .Get 1 }}<a class="footnote-return" href="{{ .Page.RelPermalink }}#fnref:{{ $i }}" data-href="#fnref:{{ $i }}"><span>Permalink to footnote</span>↩</a></p></li>
