--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -134,39 +134,6 @@
   {{ block "lazy" . }}
   {{ end }}
 
-  <!-- UI Switcher -->
-  <script>
-    const body = document.querySelector('body');
-    const sets = document.getElementById('settings');
-    const ops = document.querySelector('section.options');
-    const colors = document.querySelectorAll('p.colors');
-    const fonts = document.querySelectorAll('p.type');
-    sets.addEventListener('click', e => {
-      ops.classList.toggle('active');
-      sets.classList.toggle('active');
-    });
-    var uiSwitcher = (item,change,mod) => {
-      item.forEach(option => {
-        option.addEventListener("click", e => {
-          e.preventDefault();
-          var value = option.id;
-          body.setAttribute(mod, value);
-          sets.classList.remove('active');
-          ops.classList.remove('active');
-          localStorage.removeItem(change);
-          localStorage.setItem(change, value);
-        }, false);
-        if (localStorage.getItem(change)) {
-          var newTheme = localStorage.getItem(change);
-          body.setAttribute(mod, newTheme);
-        }
-      })
-    }
-    uiSwitcher(colors,'theme','class');
-    uiSwitcher(fonts,'type','id');
-    // Console Stuff
-    console.log('I love to sleep because in my dreams I can finally get revenge on the stingray that strangled Steve Irwin.');
-  </script>
   <!-- SW -->
   {{ $sw := resources.Get "sw.js" | minify }}
   <script>
@@ -181,94 +148,27 @@
         }
       });
     }
+    console.log('I love to sleep because in my dreams I can finally get revenge on the stingray that strangled Steve Irwin.');
   </script>
+
+  <!-- UI Switcher -->
+  {{ $ui := resources.Get "js/ui.js" | minify }}
+  <script src="{{ $ui.Permalink }}"></script>
+  
+  <!-- Scripts -->
+  {{ if or (.IsPage) (eq .Kind "section") }}
+  {{ $barefoot := resources.Get "js/barefoot.js" }}
+  {{ $copy := resources.Get "js/copy.js" }}
+  {{ $filterSort := resources.Get "js/filter-sort.js" }}
+  {{ $scripts := slice $barefoot $copy $filterSort | resources.Concat "js/scripts.js" | minify }}
+  <script src="{{ $scripts.Permalink }}"></script>
+  {{ end }}
+  
+  <!-- Barefoot -->
   {{ if .IsPage }}
-  <!-- Code to Clipboard -->
-  <script>
-    const highlight = document.querySelectorAll('div.highlight');
-    highlight.forEach(el => {
-      const button = document.createElement('button');
-      button.innerHTML = 'COPY';
-      button.classList.add('copy');
-      button.setAttribute('aria-label', 'Copy to clipboard');
-      el.prepend(button);
-    });
-    const label = document.querySelectorAll('button.copy');
-    label.forEach(copy => {
-      copy.addEventListener('click', () => {
-        const selection = window.getSelection();
-        const range = document.createRange();
-        const pre = copy.nextSibling;
-        const code = pre.querySelector('code');
-        const original = copy.innerHTML;
-        range.selectNodeContents(code);
-        selection.removeAllRanges();
-        selection.addRange(range);
-        try {
-          document.execCommand('copy');
-          selection.removeAllRanges();
-          copy.innerHTML = 'Copied!';
-          setTimeout(() => {
-            copy.innerHTML = original;
-          }, 1200);
-        } catch(e) {
-          copy.innerHTML = "Can't copy, hit Ctrl+C!";
-          setTimeout(() => {
-            copy.innerHTML = original;
-          }, 1200);
-        }
-      });
-    });
-  </script>
-  {{ $footnotes := resources.Get "js/barefoot.js" | minify }}
-  <script src="{{ $footnotes.Permalink }}"></script>
   <script>
     lf = new BareFoot();
     lf.init();
-  </script>
-  {{ end }}
-  {{ if or (eq .Title "Bookmarks") (eq .Title "Reading List") }}
-  <!-- Filter and Sort -->
-  <script>
-    // Filter by tag
-    const checkboxes = document.getElementsByName('category');
-    for (var i=0; i<checkboxes.length; i++) {
-      if (checkboxes[i].type == 'checkbox') {
-        checkboxes[i].checked = false;
-      }
-    }
-    var cat = (id) => {
-      const category = document.getElementsByName('category');
-      const liClass = 'li#record-item.' + id.id;
-      const hidden = document.querySelectorAll('li#record-item');
-      const active = document.querySelectorAll(liClass);
-      Array.prototype.forEach.call(category,el => {
-        el.checked = false;
-      });
-      id.checked = true;
-      hidden.forEach(hi => hi.classList.add('none'));
-      active.forEach(ac => ac.classList.remove('none'));
-    }
-    // Sort alphabetically by title
-    var sort = (par, atr) => {
-      const ul = document.getElementById(par);
-      const lis = ul.querySelectorAll("li");
-      ul.classList.toggle('up');
-      [].slice
-        .call(lis)
-        .sort((a,b) => {
-          const textA = a.getAttribute(atr).toLowerCase();
-          const textB = b.getAttribute(atr).toLowerCase();
-          if (ul.classList.contains('up')) {
-            return (textA < textB) ? -1 : (textA > textB) ? 1 : 0;
-          } else {
-            return (textA > textB) ? -1 : (textA < textB) ? 1 : 0;
-          }
-        })
-        .forEach(el => {
-          el.parentNode.appendChild(el);
-        });
-    }
   </script>
   {{ end }}
   <!-- a11y -->
