Bookmarks fixes and updates
Added aria-live attribute to notify screen readers when records change.
Added close button that clear category selection.

--- a/layouts/articles/single.html
+++ b/layouts/articles/single.html
@@ -5,7 +5,7 @@
       <section class="content">{{ .Content }}</section>
       <div class="meta-info">
         {{ partial "date.html" . }}
-        {{ partial "category.html" . }}
+        {{ partial "tags.html" . }}
       </div>
     </article>
   </main>
