--- a/layouts/articles/summary.html
+++ b/layouts/articles/summary.html
@@ -3,6 +3,6 @@
   <p class="content">{{ .Summary }}</p>
   <div class="meta-info">
     {{ partial "date.html" . }}
-    {{ partial "category.html" . }}
+    {{ partial "tags.html" . }}
   </div>
 </article>
