--- a/assets/css/critical.scss
+++ b/assets/css/critical.scss
@@ -263,7 +263,7 @@ body {
   }
   // Bookmarks
   nav.categories {
-    div.tag {
+    .tag {
       @extend %content-center;
       @extend %flex;
       @extend %items-center;
@@ -286,6 +286,23 @@ body {
         cursor: pointer;
         &:hover {
           text-decoration: underline;
+        }
+      }
+      svg {
+        @include color(fill, meta);
+        height: 16px;
+        width: 16px;
+      }
+      &.close {
+        background: none;
+        border: none;
+        cursor: pointer;
+        margin-left: auto;
+        outline: none;
+        transform: scale(0);
+        transition: all .25s ease;
+        &.active {
+          transform: scale(1);
         }
       }
     }
