--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,8 +4,8 @@
     <a href="{{ .Site.BaseURL }}bookshelf" class="extra-items">Bookshelf</a>
     <p class="divider">&nbsp;&bull;&nbsp;</p>
     <a href="{{ .Site.BaseURL }}bookmarks" class="extra-items">Bookmarks</a>
-    <p class="divider">&nbsp;&bull;&nbsp;</p>
-    <a href="{{ .Site.BaseURL }}reading-list" class="extra-items">Reading List</a>
+    {{/*  <p class="divider">&nbsp;&bull;&nbsp;</p>
+    <a href="{{ .Site.BaseURL }}reading-list" class="extra-items">Reading List</a>  */}}
     <p class="divider">&nbsp;&bull;&nbsp;</p>
     <a href="{{ .Site.BaseURL }}stuff" class="extra-items">Stuff</a>
   </nav>
