--- a/layouts/_default/category.html
+++ b/layouts/_default/category.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <main class="list">
+  <main class="list tags">
     <h1 class="title page-title">{{ .Name }}</h1>
     <nav class="all-tags">
       {{ $s := .Section }}
