--- a/layouts/articles/list.html
+++ b/layouts/articles/list.html
@@ -1,5 +1,5 @@
 {{ define "main" }}
-  <main class="list">
+  <main class="list articles">
     <h1 class="title page-title">Articles</h1>
     <nav class="all-tags">
       {{ $s := .Section }}
