--- a/layouts/partials/categories.html
+++ b/layouts/partials/categories.html
@@ -1,27 +1,27 @@
 <nav class="all-tags categories">
   <div class="tag articles">
     <span aria-hidden="true">#</span>
-    <input id="articles" type="checkbox" name="category" onclick="cat(this)">
+    <input id="articles" type="checkbox" name="category">
     <label for="articles" class="category">articles</label>
   </div>
   <div class="tag comics">
     <span aria-hidden="true">#</span>
-    <input id="comics" type="checkbox" name="category" onclick="cat(this)">
+    <input id="comics" type="checkbox" name="category">
     <label for="comics" class="category">comics</label>
   </div>
   <div class="tag podcasts">
     <span aria-hidden="true">#</span>
-    <input id="podcasts" type="checkbox" name="category" onclick="cat(this)">
+    <input id="podcasts" type="checkbox" name="category">
     <label for="podcasts" class="category">podcasts</label>
   </div>
   <div class="tag tweets">
     <span aria-hidden="true">#</span>
-    <input id="tweets" type="checkbox" name="category" onclick="cat(this)">
+    <input id="tweets" type="checkbox" name="category">
     <label for="tweets" class="category">tweets</label>
   </div>
   <div class="tag videos">
     <span aria-hidden="true">#</span>
-    <input id="videos" type="checkbox" name="category" onclick="cat(this)">
+    <input id="videos" type="checkbox" name="category">
     <label for="videos" class="category">videos</label>
   </div>
   <button class="tag close" aria-hidden="true">
